@@ -263,9 +263,16 @@ IN DEVELOPMENT
 
   TESTING:
 
+   * New helper function ``bzrlib.tests.condition_id_re`` which helps
+     filter tests based on a regular expression search on the tests id.
+     (Robert Collins)
+    
    * New helper function ``bzrlib.tests.condition_isinstance`` which helps
      filter tests based on class. (Robert Collins)
     
+   * New helper function ``bzrlib.tests.exclude_suite_by_condition`` which
+     generalises the ``exclude_suite_by_re`` function. (Robert Collins)
+
    * New helper function ``bzrlib.tests.filter_suite_by_condition`` which
      generalises the ``filter_suite_by_re`` function. (Robert Collins)
 
